# Library-Management

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: c-cpp.yml
Data/: stored_data.cpp  stored_data.h
Models/: book.cpp  book.h
database_interaction/: database_interaction.cpp  database_interaction.h
utilities/: input.cpp  input.h  output.h
